<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Item Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/item_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/item_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_price"
                android:inputType="number" />

            <!-- Units for price (EUR) -->
            <TextView
                android:id="@+id/label_price_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_item_price" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/item_quantity"
            />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_quantity"
                android:inputType="number" />

            <!-- Units for quantity (pcs.) -->
            <TextView
                android:id="@+id/label_quantity_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_item_quantity" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
