<!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@android:color/holo_blue_bright"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/name_price_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/image"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                tools:text="Price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/unit_item_price" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_button_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/image"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:text="Quantity" />

            <TextView
                android:id="@+id/item_quantity_units"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:text="@string/unit_item_quantity" />

        </LinearLayout>

        <Button
            android:focusable="false"
            android:id="@+id/sale_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:text="@string/action_sale" />
    </LinearLayout>
</LinearLayout>